SWATCH-763 Error parsing IP Address on rhsm-conduit messages to HBI